--- a/Views/Web.config
+++ b/Views/Web.config
@@ -29,8 +29,13 @@
   <system.webServer>
     <handlers>
       <remove name="BlockViewHandler"/>
-      <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
+		<remove name="WebPHandler" />
+		<add name="WebPHandler" type="Web.Images.WebP.RequestHandler, Web.Images.WebP" path="*.webp" verb="GET" />
+		<add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+	  <staticContent>
+		  <mimeMap fileExtension=".webp" mimeType="image/webp" />
+	  </staticContent>
   </system.webServer>
 
   <system.web>
